fix some styling issues on mobile

--- a/src/scss/Testimonials.scss
+++ b/src/scss/Testimonials.scss
@@ -111,9 +111,9 @@
                     background-color: rgba(0,0,0,0.3);
                     color: white;
                     h2{
-                        margin: 10px;
+                        margin: 15px;
                         padding: 0;
-                        font-size: 7vw;
+                        font-size: 6.5vw;
                         font-weight: 400;
                         line-height: 150%;
                         opacity: 1;
@@ -125,6 +125,7 @@
                         color: pink;
                         background-color: rgba(0,0,0,0);
                         border: 0px;
+                        opacity: 0.8;
                     }
                     .nextButton{
                         position: absolute;
@@ -134,6 +135,7 @@
                         background-color: none;
                         background-color: rgba(0,0,0,0);
                         border: 0px;
+                        opacity: 0.8;
                     }
                 }
             }
